<resources>
    <string name="app_name">FinalProject</string>
    <string name="explore_ph">Explore PH</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username_email_address">Username/Email Address</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="register"> <u>Register</u></string>
    <string name="register1">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in1"><u>Sign in</u></string>
    <string name="confirm">CONFIRMATION</string>
    <string name="entered_full_name">Entered Full Name</string>
    <string name="entered_username">Entered Username</string>
    <string name="entered_email_address">Entered Email Address</string>
    <string name="entered_password">Entered Password</string>
    <string name="confirmation">I understand that the information I have provided will be used to create my account and to provide me with the services I have requested.</string>
    <string name="cancel">CANCEL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_or_add_a_new_picture"><u>Edit or Add a new picture</u></string>
</resources>