<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sample_bg"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/explore_ph"
            android:textColor="@color/white"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="345dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/sign_in"
                android:textColor="@color/blue"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:layout_width="270dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/montserrat"
                android:hint="@string/username_email_address"
                android:textSize="12sp"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="270dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:textSize="12sp"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/navy"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/sign_in"
                android:textSize="12sp"
                android:onClick=""/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/register"
                    style="android:style/Widget.Button"
                    android:clickable="true"
                    android:onClick="toRegister"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>